--- a/client/src/pages/MainPage/mainpage.css
+++ b/client/src/pages/MainPage/mainpage.css
@@ -1,6 +1,6 @@
 .logo {
     font-family: 'Bebas Neue', sans-serif;
-    font-size: 150vw;
+    font-size: 150px;
     font-weight: bold;
     color: #FF0050; 
     text-transform: uppercase;
@@ -15,7 +15,7 @@
 
 .logo2 {
     font-family: 'Bebas Neue', sans-serif;
-    font-size: 150vw;
+    font-size: 150px;
     font-weight: bold;
     color: #000000; 
     text-transform: uppercase;
