--- a/client/src/pages/SigninPage/signinpage.css
+++ b/client/src/pages/SigninPage/signinpage.css
@@ -5,6 +5,12 @@
     color: #FF0050; 
     text-transform: uppercase;
     letter-spacing: 1px;
+    white-space: nowrap;
+  overflow: visible;
+  text-overflow: ellipsis;
+  letter-spacing: 1px;
+  line-height: 1.2;
+
 }
 
 .logo2 {
@@ -14,6 +20,12 @@
     color: #000000; 
     text-transform: uppercase;
     letter-spacing: 1px;
+    white-space: nowrap;
+  overflow: visible;
+  text-overflow: ellipsis;
+  letter-spacing: 1px;
+  line-height: 1.2;
+
 }
 
 .slogan {
