--- a/client/src/components/NavBar/navbar.css
+++ b/client/src/components/NavBar/navbar.css
@@ -4,8 +4,10 @@
     justify-content: space-between; /* Logo left, links right */
     align-items: center;
     padding: 20px 60px; /* Increased right/left padding */
-    background-color: #111;
-    border-bottom: 2px solid #00f0ff;
+    background: linear-gradient(90deg, black, #2c5364, black); 
+   /* Semi-transparent black */
+    backdrop-filter: blur(10px); /* Adds a glassmorphism effect */
+    border-bottom: 1px solid #00ffff; 
     height: 140px;
   }
 
@@ -67,7 +69,7 @@
     width: 100%;
   }
 
-  .scryix-logo {
+  .predixor-logo {
     color: rgb(0, 240, 255);
     font-size: 40px;
     font-weight: bold;
@@ -77,12 +79,12 @@
     cursor: pointer;
   }
   
-  .scryix-logo span {
+  .predixor-logo span {
     color: rgb(0, 240, 255);
   }
   
   /* Hover effect */
-  .scryix-logo:hover {
+  .predixor-logo:hover {
     transform: scale(1.1);
     text-shadow:
       0 0 5px #00f0ff,
@@ -94,7 +96,7 @@
   }
   
   /* Optional: Flicker on hover */
-  .scryix-logo:hover {
+  .predixor-logo:hover {
     animation: flicker 1s infinite alternate;
   }
   
@@ -152,4 +154,32 @@
   }
 }
 
+.avatar-container {
+    display: flex;
+    align-items: center;
+  }
+  
+  .avatar {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 2px solid #00ffff;
+    box-shadow: 0 0 10px #00ffff;
+    cursor: pointer;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+  
+  .avatar:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 15px #40ffaa;
+  }
+
+  .nav-links li a.active {
+    color: #00ff80;
+    text-shadow: 0 0 10px #00ff80, 0 0 20px #00ff80;
+  }
+  
+  .nav-links li a.active::before {
+    width: 100%;
+  }
   
